[package]
name = "wasm-concepts-import-js-functions"
version = "0.1.0"
edition = "2018"
# edition = "2021"

[lib]
crate-type = ["cdylib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# console_error_panic_hook = { version = "0.1.7", optional = true }

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
